# functional-programming

./: README.md  stack.yaml
hw0/: LICENSE  README.md  hw0.cabal
hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
hw1/: hw1.cabal
hw1-second-chance/: README.md  hw1-second-chance.cabal
hw1-second-chance/src/Block6/: Task1.hs  Task2.hs  Task3.hs  Task4.hs
hw1-second-chance/test/Block6Spec/: Task1Spec.hs  Task2Spec.hs  Task3Spec.hs  Task4Spec.hs
hw1/src/Block1/: Task1.hs  Task2.hs  Task3.hs
hw1/src/Block2/: Task1.hs  Task2.hs
hw1/src/Block3/: Task1.hs  Task2.hs
hw1/src/Block4/: Task1.hs  Task2.hs  Task3.hs
hw1/src/Block5/: Task1.hs
hw1/test/Block1Spec/: Task1Spec.hs  Task2Spec.hs
hw1/test/Block2Spec/: Task1Spec.hs  Task2Spec.hs
hw1/test/Block3Spec/: Task1Spec.hs
hw1/test/Block4Spec/: Task1Spec.hs
hw1/test/Block5Spec/: Task1Spec.hs
hw1/test/unit/Block1Spec/: Task2Spec.hs  Task3Spec.hs
hw1/test/unit/Block2Spec/: Task2Spec.hs
hw1/test/unit/Block3Spec/: Task2Spec.hs
hw2/: README.md  hw2.cabal
hw3/: README.md  hw3.cabal
hw4/: README.md  hw4.cabal
practice1/: LICENSE  README.md  practice1.cabal
practice1/app/: Main.hs
