name:                hw1-second-chance
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/CaelmBleidd/fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Alexey Menshutin
maintainer:          alex.menshutin99@gmail.com
copyright:           2020 Alexey Menshutin

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block6.Task1
                     , Block6.Task2
                     , Block6.Task3
                     , Block6.Task4
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , split
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  build-depends:       base
                     , hspec
                     , hspec-discover
                     , QuickCheck
                     , split
                     , hw1-second-chance
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Block6Spec.Task1Spec
                     , Block6Spec.Task2Spec
                     , Block6Spec.Task3Spec
                     , Block6Spec.Task4Spec
  default-language:    Haskell2010
  build-tool-depends:  hspec-discover:hspec-discover