name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/CaelmBleidd/fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Alexey Menshutin
maintainer:          alex.menshutin99@gmail.com
copyright:           2020 Alexey Menshutin

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block1.Task1
                     , Block1.Task2
                     , Block1.Task3
                     , Block2.Task1
                     , Block2.Task2
                     , Block3.Task1
                     , Block3.Task2
                     , Block4.Task1
                     , Block4.Task2
                     , Block4.Task3
                     , Block5.Task1
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , mtl
  default-language:    Haskell2010

test-suite unit-tests
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test/unit
  build-depends:       base
                     , hspec
                     , hspec-discover
                     , hw1
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Block1Spec.Task1Spec
                     , Block1Spec.Task2Spec
                     , Block1Spec.Task3Spec
                     , Block2Spec.Task2Spec
                     , Block3Spec.Task1Spec
                     , Block3Spec.Task2Spec
                     , Block4Spec.Task1Spec
                     , Block5Spec.Task1Spec
  default-language:    Haskell2010
  build-tool-depends:  hspec-discover:hspec-discover